@@ -3,13 +3,14 @@ package com.nocountry.financeai.security;
 import com.nocountry.financeai.entity.UserEntity;
 import com.nocountry.financeai.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -25,7 +26,11 @@ public class CustomUserDetailsService implements UserDetailsService {
         return new User(
                 user.getEmail(),
                 user.getPassword(),
-                Collections.emptyList()
+                List.of(
+                        new SimpleGrantedAuthority(
+                                "ROLE_" + user.getRol().name()
+                        )
+                )
         );
     }
 }
